# saet

./: README.md  __init__.py  pyproject.toml
adapters/: __init__.py
adapters/mt5/: __init__.py  mt5_broker_gateway.py  mt5_connection.py  mt5_market_data.py
adapters/persistence/: __init__.py  database.py  models.py  sqlalchemy_repos.py
adapters/persistence/migrations/: __init__.py
adapters/scheduler/: __init__.py  apscheduler_adapter.py
adapters/security/: __init__.py  credential_vault.py
api/: __init__.py  app.py  dependencies.py
api/routes/: __init__.py  backtests.py  environments.py  execution.py  monitoring.py  performance.py  risk.py  strategies.py
api/schemas/: __init__.py
cli/: __init__.py  main.py
cli/commands/: __init__.py
config/: __init__.py  settings.py
core/domain/: enums.py  exceptions.py
core/domain/interfaces/: __init__.py  broker_gateway.py  market_data.py  repositories.py  strategy_runner.py
core/domain/interfaces/models/: __init__.py  account.py  backtest.py  market.py  order.py  position.py  signal.py  (+1 more)
core/services/: __init__.py  backtest_engine.py  environment_service.py  exclusivity_guard.py  execution_engine.py  performance_service.py  risk_service.py  strategy_service.py
doc/: requisitos_arquitetura.md  requistos_funcionais.md
monitoring/: __init__.py  event_tracker.py  logger.py
strategies/: __init__.py  base.py
strategies/examples/: __init__.py  sma_crossover.py
tests/: __init__.py  conftest.py
tests/unit/: test_credential_vault.py  test_domain_models.py  test_exceptions.py  test_sma_crossover.py
