[tool.poetry]
name = "saet"
version = "0.1.0"
description = "SAET - Sistema de Automacao de Estrategias de Trading"
authors = ["Diego Augusto"]
readme = "README.md"
packages = [{include = "saet"}]
[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.0"
uvicorn = {extras = ["standard"], version = "^0.34.0"}
sqlalchemy = "^2.0.0"
alembic = "^1.14.0"
pydantic = "^2.0.0"
pydantic-settings = "^2.0.0"
typer = "^0.15.0"
structlog = "^24.0.0"
apscheduler = "^3.10.0"
cryptography = "^44.0.0"
httpx = "^0.28.0"
[tool.poetry.dependencies.MetaTrader5]
version = "^5.0.0"
optional = true
[tool.poetry.extras]
mt5 = ["MetaTrader5"]
[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-asyncio = "^0.25.0"
pytest-cov = "^6.0.0"
ruff = "^0.9.0"
mypy = "^1.14.0"
[tool.poetry.scripts]
saet = "saet.cli.main:app"
[tool.ruff]
target-version = "py311"
line-length = 100
[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "SIM"]
[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"